--- a/docs/index_.adoc
+++ b/docs/index_.adoc
@@ -49,7 +49,9 @@ Provided with those jar files located in the `Drivers` directory, you can start 
 
 == deploy-visual-inspection-sample-for-katalon task
 
-The plugin provides one more Gradle task which deploys a set of sample code that performs Visual Inspection practice.
+The plugin provides one more Gradle task which deploys a set of sample code that performs Visual Inspection practice. The sample is published at
+
+* link:https://github.com/kazurayam/inspectus4katalon-sample-project/releases[inspectus4katalon-sample-project]
 
 [source,text]
 ----
